...
            <objects>
                <viewController storyboardIdentifier="FirstViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="Demo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FTm-Wx-cUB">
                                <rect key="frame" x="106" y="333" width="163" height="21"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="Cqo-Id-ztJ"/>
                                    <constraint firstAttribute="width" constant="163" id="K9v-UP-Gpk"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
